tests/ui/autoref-autoderef/deref-ambiguity-becomes-nonambiguous.stderr
error[E0282]: type annotations needed for `Value<Rc<_>>`
  --> $DIR/deref-ambiguity-becomes-nonambiguous.rs:31:9
   |
LL |     let var_fn = Value::wrap();
   |         ^^^^^^
...
LL |     let _ = var_fn.clone();
   |                    ----- type must be known at this point
   |
help: consider giving `var_fn` an explicit type, where the placeholders `_` are specified
   |
LL |     let var_fn: Value<Rc<_>> = Value::wrap();
   |               ++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
